--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-is": ">= 16.8.0",
     "reactstrap": "9.1.3",
+    "rebass": "^4.0.7",
     "styled-components": "^5.3.5"
   },
   "scripts": {
