--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.18.10",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.0",
-    "@popperjs/core": "^2.11.5",
-    "@types/react": "^17.0.0 || ^18.0.0",
-    "@types/styled-components": "^5.1.14",
+    "@popperjs/core": "^2.11.6",
+    "@types/react": "^18.0.17",
+    "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.0",
-    "mui/material": "*",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-is": ">= 16.8.0",
-    "reactstrap": "9.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "reactstrap": "^9.1.3",
     "rebass": "^4.0.7",
     "styled-components": "^5.3.5"
   },
